--- a/index.html
+++ b/index.html
@@ -16,15 +16,48 @@
           src="https://scontent-mia3-1.xx.fbcdn.net/v/t1.0-9/14937466_155012088302712_8773674962588928492_n.jpg?_nc_cat=104&_nc_sid=85a577&_nc_ohc=6aJSYaOUl5UAX97KlRE&_nc_ht=scontent-mia3-1.xx&oh=689174d835a09e74c9e94990209b3e21&oe=5E957B06"
           alt="Joey Tomatoes"
       /></a>
-      <a href="#menu">Menus</a>
       <a href="#about">About Us</a>
+      <a href="#menu">Menu</a>
       <a href="#location">Locations</a>
       <a href="#contact">Contact Us</a>
     </div>
     <!-- end navigation -->
-    <img
-      src="https://scontent-mia3-2.xx.fbcdn.net/v/t31.0-8/15578280_193497954454125_4435319243295781112_o.jpg?_nc_cat=102&_nc_sid=6e5ad9&_nc_ohc=EhwHWbtVXhYAX8nxhy1&_nc_ht=scontent-mia3-2.xx&oh=2fef2648262f32d73a3ba074bd93e7c1&oe=5E984B05"
-      alt="Awesome Sandwiches"
-    />
+    <div class="main">
+      <div>
+        <img
+          class="sandwich"
+          id="home"
+          src="https://scontent-mia3-2.xx.fbcdn.net/v/t31.0-8/15578280_193497954454125_4435319243295781112_o.jpg?_nc_cat=102&_nc_sid=6e5ad9&_nc_ohc=EhwHWbtVXhYAX8nxhy1&_nc_ht=scontent-mia3-2.xx&oh=2fef2648262f32d73a3ba074bd93e7c1&oe=5E984B05"
+          alt="Awesome Sandwiches"
+        />
+      </div>
+      <!-- about -->
+      <div class="about" id="about">
+        <p>
+          Joey Tomatoes Deli & Market provides a high quality food made to
+          perfection. Come in and experience our unmatched service and food.
+          Browse our restaurant menu today we have to great locations in Mt
+          Pleasant and on Clements Ferry Road!
+        </p>
+      </div>
+      <!-- end about -->
+      <!-- menu -->
+      <div class="center">
+        <img
+          class="menu"
+          id="menu"
+          src="https://d6ozfheqtj1tz.cloudfront.net/ChIJNS6rFQlx_ogRJsOW_wAY02w/5cb86b944f0a1.jpg"
+          alt="Joey Tomatoes Breakfast and Lunch Menu"
+        />
+      </div>
+      <!-- end menu -->
+      <!-- locations -->
+      <div class="location">
+        <div class="card" id="location1"></div>
+        <div class="card" id="location2"></div>
+      </div>
+      <!-- end locations-->
+    </div>
+    <!-- end main -->
   </body>
 </html>
