updated image links

--- a/index.html
+++ b/index.html
@@ -34,14 +34,10 @@
         <img
           class="sandwich"
           id="home"
-          src="https://scontent-mia3-2.xx.fbcdn.net/v/t31.0-8/15578280_193497954454125_4435319243295781112_o.jpg?_nc_cat=102&_nc_sid=6e5ad9&_nc_ohc=EhwHWbtVXhYAX8nxhy1&_nc_ht=scontent-mia3-2.xx&oh=2fef2648262f32d73a3ba074bd93e7c1&oe=5E984B05"
+          src="images/JTsandwiches.jpg"
           alt="Awesome Sandwiches"
         />
-        <img
-          class="logo"
-          src="https://scontent-mia3-1.xx.fbcdn.net/v/t1.0-9/14937466_155012088302712_8773674962588928492_n.jpg?_nc_cat=104&_nc_sid=85a577&_nc_ohc=6aJSYaOUl5UAX97KlRE&_nc_ht=scontent-mia3-1.xx&oh=689174d835a09e74c9e94990209b3e21&oe=5E957B06"
-          alt="Joey Tomatoes"
-        />
+        <img class="logo" src="images/JTlogo.jpg" alt="Joey Tomatoes" />
       </div>
       <!-- menu -->
       <div class="center">
@@ -65,25 +61,25 @@
               document.getElementById("location1"),
               {
                 zoom: 12,
-                center: mtp
+                center: mtp,
               }
             );
             var map2 = new google.maps.Map(
               document.getElementById("location2"),
               {
                 zoom: 12,
-                center: cf
+                center: cf,
               }
             );
             var marker1 = new google.maps.Marker({
               position: mtp,
               map: map1,
-              title: "Mt. Pleasant Location"
+              title: "Mt. Pleasant Location",
             });
             var marker = new google.maps.Marker({
               position: cf,
               map: map2,
-              title: "Clements Ferry Location"
+              title: "Clements Ferry Location",
             });
           }
         </script>
@@ -252,7 +248,7 @@
           <div class="modal-body">
             <img
               class="wine"
-              src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/14980584_155312634939324_7357868642701359887_n.jpg?_nc_cat=104&_nc_sid=2d5d41&_nc_ohc=n4zJS6DtQ0kAX98gkxv&_nc_ht=scontent-atl3-1.xx&oh=73cb5230762f29343ff784704dbf7c0e&oe=5E9BF087"
+              src="images/Jtwine.jpg"
               alt="A Meal Without Wine is Called Breakfast"
             />
             <p>
