--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <img
           class="sandwich"
           id="home"
-          src="images/JTsandwiches.jpg"
+          src="/images/JTsandwiches.jpg"
           alt="Awesome Sandwiches"
         />
-        <img class="logo" src="images/JTlogo.jpg" alt="Joey Tomatoes" />
+        <img class="logo" src="/images/JTlogo.jpg" alt="Joey Tomatoes" />
       </div>
       <!-- menu -->
       <div class="center">
@@ -248,7 +248,7 @@
           <div class="modal-body">
             <img
               class="wine"
-              src="images/Jtwine.jpg"
+              src="/images/Jtwine.jpg"
               alt="A Meal Without Wine is Called Breakfast"
             />
             <p>
