updated links to full url

--- a/index.html
+++ b/index.html
@@ -34,17 +34,21 @@
         <img
           class="sandwich"
           id="home"
-          src="/images/JTsandwiches.jpg"
+          src="https://scottsandman.github.io/jrsrestaurantHTML/images/JTsandwiches.jpg"
           alt="Awesome Sandwiches"
         />
-        <img class="logo" src="/images/JTlogo.jpg" alt="Joey Tomatoes" />
+        <img
+          class="logo"
+          src="https://scottsandman.github.io/jrsrestaurantHTML/images/JTlogo.jpg"
+          alt="Joey Tomatoes"
+        />
       </div>
       <!-- menu -->
       <div class="center">
         <img
           class="menu"
           id="menu"
-          src="https://d6ozfheqtj1tz.cloudfront.net/ChIJNS6rFQlx_ogRJsOW_wAY02w/5cb86b944f0a1.jpg"
+          src="https://scottsandman.github.io/jrsrestaurantHTML/images/JTmenu.jpg"
           alt="Joey Tomatoes Breakfast and Lunch Menu"
         />
       </div>
@@ -248,7 +252,7 @@
           <div class="modal-body">
             <img
               class="wine"
-              src="/images/Jtwine.jpg"
+              src="https://scottsandman.github.io/jrsrestaurantHTML/Jtwine.jpg"
               alt="A Meal Without Wine is Called Breakfast"
             />
             <p>
