--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img
           class="logo"
           src="https://scottsandman.github.io/jrsrestaurantHTML/images/JTlogo.jpg"
-          alt="Joey Tomatoes"
+          alt="Joey Tomatoes Logo"
         />
       </div>
       <!-- menu -->
